--- a/vannai.ipynb
+++ b/vannai.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "c017d135",
    "metadata": {},
    "outputs": [],
@@ -29,9 +29,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Enter your email to get the API key\n",
     "api_key = vanna.get_api_key('dinhvietquyen18@gmail.com')\n",
-    "\n",
-    "vanna_model_name = \"real_estate_model\"\n",
+    "# Fill the model name which you created on Vanna.ai\n",
+    "vanna_model_name = \"abc\"\n",
     "vn = VannaDefault(model=vanna_model_name, api_key=api_key)"
    ]
   },
@@ -133,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "853120d6",
    "metadata": {},
    "outputs": [],
@@ -161,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
