fix loi sai chinh ta

--- a/vannai.ipynb
+++ b/vannai.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "c017d135",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
     "# Enter your email to get the API key\n",
     "api_key = vanna.get_api_key('dinhvietquyen18@gmail.com')\n",
     "# Fill the model name which you created on Vanna.ai\n",
-    "vanna_model_name = \"abc\"\n",
+    "vanna_model_name = \"dhhdhdhd\"\n",
     "vn = VannaDefault(model=vanna_model_name, api_key=api_key)"
    ]
   },
@@ -97,7 +97,7 @@
     "\"area_unit as m² (square meter),\" \\\n",
     "\"and bedroom/bathroom as the number of bedrooms/bathrooms respectively.\")\n",
     "\n",
-    "vn.train(documentaion=\"price and price_per_m² both have null values, \" \\\n",
+    "vn.train(documentation=\"price and price_per_m² both have null values, \" \\\n",
     "\"so we need to handle that in our SQL queries.\" \\\n",
     "\"If any question about price or price_per_m², \" \\\n",
     "\"we will not return null values for those columns.\")"
